--- a/css/plantilla.css
+++ b/css/plantilla.css
@@ -3880,7 +3880,7 @@ html, body{
   font-size: 18px;
   margin:0;
   padding:0;
-  line-height: 22px;
+  line-height: 1.5;
   font-family: sans-serif;
   background-color: #955BA5;
   color:#FFFFFF;
